--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,6 +37,7 @@ dependencies:
   bloc: ^8.0.3
   flutter_bloc: ^8.0.1
   flutter_svg: ^1.1.0
+  easy_localization: ^3.0.1
 
 dev_dependencies:
   flutter_test:
